--- a/src/crafts.html
+++ b/src/crafts.html
@@ -46,11 +46,13 @@
   <body>
     <div class="O_Header">
       <div class="M_Header">
-        <a class="A_Logo" href="index.html">Ремёсла России</a>
+        <a class="A_Logo" href="/">Ремёсла России</a>
         <div class="C_HeaderNav">
-          <a class="A_HeaderSections" href="crafts.html">Библиотека</a>
-          <a class="A_HeaderSections" href="map.html">Карта</a>
-          <a class="A_HeaderSections" href="articles.html">Статьи и подборки</a>
+          <a class="A_HeaderSections" href="./crafts.html">Библиотека</a>
+          <a class="A_HeaderSections" href="./map.html">Карта</a>
+          <a class="A_HeaderSections" href="./articles.html"
+            >Статьи и подборки</a
+          >
         </div>
       </div>
     </div>
