--- a/src/crafts/uelen-bone-carving.html
+++ b/src/crafts/uelen-bone-carving.html
@@ -57,9 +57,11 @@
       <div class="M_Header">
         <a class="A_Logo" href="/">Ремёсла России</a>
         <div class="C_HeaderNav">
-          <a class="A_HeaderSections" href="crafts.html">Библиотека</a>
-          <a class="A_HeaderSections" href="map.html">Карта</a>
-          <a class="A_HeaderSections" href="articles.html">Статьи и подборки</a>
+          <a class="A_HeaderSections" href="../crafts.html">Библиотека</a>
+          <a class="A_HeaderSections" href="../map.html">Карта</a>
+          <a class="A_HeaderSections" href="../articles.html"
+            >Статьи и подборки</a
+          >
         </div>
       </div>
     </div>
