--- a/src/index.html
+++ b/src/index.html
@@ -44,19 +44,13 @@
   <body>
     <div class="O_Header">
       <div class="M_Header">
-        <div class="A_Logo">
-          Ремёсла России
-        </div>
+        <a class="A_Logo" href="/">Ремёсла России</a>
         <div class="C_HeaderNav">
-          <div class="A_HeaderSections">
-            <a href="crafts.html">Библиотека</a>
-          </div>
-          <div class="A_HeaderSections">
-            <a href="map.html">Карта</a>
-          </div>
-          <div class="A_HeaderSections">
-            <a href="articles.html">Статьи и подборки</a>
-          </div>
+          <a class="A_HeaderSections" href="./crafts.html">Библиотека</a>
+          <a class="A_HeaderSections" href="./map.html">Карта</a>
+          <a class="A_HeaderSections" href="./articles.html"
+            >Статьи и подборки</a
+          >
         </div>
       </div>
     </div>
