--- a/src/index.html
+++ b/src/index.html
@@ -65,17 +65,17 @@
         </div>
         <div class="C_FooterIconsSocialNetwork">
           <a
-            class="A_FooterIconSocialNetwork VK"
+            class="A_FooterIconSocialNetwork -VK"
             href="https://vk.com/crafts_ru"
             target="_blank"
           ></a>
           <a
-            class="A_FooterIconSocialNetwork TG"
+            class="A_FooterIconSocialNetwork -TG"
             href="https://t.me/crafts_ru"
             target="_blank"
           ></a>
           <a
-            class="A_FooterIconSocialNetwork Dzen"
+            class="A_FooterIconSocialNetwork -Dzen"
             href="https://dzen.ru/crafts_ru"
             target="_blank"
           ></a>
