--- a/src/map.html
+++ b/src/map.html
@@ -44,19 +44,13 @@
   <body>
     <div class="O_Header">
       <div class="M_Header">
-        <div class="A_Logo">
-          Ремёсла России
-        </div>
+        <a class="A_Logo" href="/">Ремёсла России</a>
         <div class="C_HeaderNav">
-          <div class="A_HeaderSections">
-            <a href="crafts.html">Библиотека</a>
-          </div>
-          <div class="A_HeaderSections">
-            <a href="map.html">Карта</a>
-          </div>
-          <div class="A_HeaderSections">
-            <a href="articles.html">Статьи и подборки</a>
-          </div>
+          <a class="A_HeaderSections" href="./crafts.html">Библиотека</a>
+          <a class="A_HeaderSections" href="./map.html">Карта</a>
+          <a class="A_HeaderSections" href="./articles.html"
+            >Статьи и подборки</a
+          >
         </div>
       </div>
     </div>
@@ -67,19 +61,21 @@
           <a href="#">О проекте</a>
         </div>
         <div class="C_FooterIconsSocialNetwork">
-          <div class="A_FooterIconSocialNetwork">
-            <a class="VK" href="https://vk.com/crafts_ru" target="_blank"></a>
-          </div>
-          <div class="A_FooterIconSocialNetwork">
-            <a class="TG" href="https://t.me/crafts_ru" target="_blank"></a>
-          </div>
-          <div class="A_FooterIconSocialNetwork">
-            <a
-              class="Dzen"
-              href="https://dzen.ru/crafts_ru"
-              target="_blank"
-            ></a>
-          </div>
+          <a
+            class="A_FooterIconSocialNetwork -VK"
+            href="https://vk.com/crafts_ru"
+            target="_blank"
+          ></a>
+          <a
+            class="A_FooterIconSocialNetwork -TG"
+            href="https://t.me/crafts_ru"
+            target="_blank"
+          ></a>
+          <a
+            class="A_FooterIconSocialNetwork -Dzen"
+            href="https://dzen.ru/crafts_ru"
+            target="_blank"
+          ></a>
         </div>
       </div>
     </div>
