--- a/src/crafts.html
+++ b/src/crafts.html
@@ -61,20 +61,26 @@
       <div class="O_CraftsTitleFilter">
         <h1 class="A_SectionTitles">Библиотека ремёсел</h1>
         <div class="M_CraftsTagButtons">
-          <div class="A_TagButton">роспись</div>
-          <div class="A_TagButton">кость</div>
-          <div class="A_TagButton">металл</div>
-          <div class="A_TagButton">резьба</div>
-          <div class="A_TagButton">дерево</div>
-          <div class="A_TagButton">текстиль</div>
-          <div class="A_TagButton">глина (керамика)</div>
-          <div class="A_TagButton">вышивка</div>
+          <div class="A_TagButton" data-tags="Роспись">роспись</div>
+          <div class="A_TagButton" data-tags="Кость">кость</div>
+          <div class="A_TagButton" data-tags="Металл">металл</div>
+          <div class="A_TagButton" data-tags="Резьба">резьба</div>
+          <div class="A_TagButton" data-tags="Дерево">дерево</div>
+          <div class="A_TagButton" data-tags="Текстиль">текстиль</div>
+          <div class="A_TagButton" data-tags="Глина (керамика)">
+            глина (керамика)
+          </div>
+          <div class="A_TagButton" data-tags="Вышивка">вышивка</div>
           <div class="A_TagOptionsText">все тэги</div>
         </div>
       </div>
 
       <div class="C_CraftsCards">
-        <a class="M_CraftsCard" href="./crafts/uelen-bone-carving.html">
+        <a
+          class="M_CraftsCard"
+          data-tags="Кость, Резьба"
+          href="./crafts/uelen-bone-carving.html"
+        >
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
@@ -85,7 +91,7 @@
           <p class="A_CraftsCardTitle">Уэленская резьба по&nbsp;кости</p>
         </a>
 
-        <a class="M_CraftsCard" href="#">
+        <a class="M_CraftsCard" data-tags="Роспись" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
@@ -96,7 +102,7 @@
           <p class="A_CraftsCardTitle">Городецкая роспись</p>
         </a>
 
-        <a class="M_CraftsCard" href="#">
+        <a class="M_CraftsCard" data-tags="Роспись" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
@@ -107,7 +113,7 @@
           <p class="A_CraftsCardTitle">Мезенская роспись по&nbsp;дереву</p>
         </a>
 
-        <a class="M_CraftsCard" href="#">
+        <a class="M_CraftsCard" data-tags="Дерево, Роспись" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
@@ -118,7 +124,7 @@
           <p class="A_CraftsCardTitle">Петровская игрушка</p>
         </a>
 
-        <a class="M_CraftsCard" href="#">
+        <a class="M_CraftsCard" data-tags="Текстиль" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
@@ -129,7 +135,7 @@
           <p class="A_CraftsCardTitle">Вологодское кружево</p>
         </a>
 
-        <a class="M_CraftsCard" href="#">
+        <a class="M_CraftsCard" data-tags="Роспись" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
@@ -140,7 +146,7 @@
           <p class="A_CraftsCardTitle">Вологодская хохлома</p>
         </a>
 
-        <a class="M_CraftsCard" href="#">
+        <a class="M_CraftsCard" data-tags="Роспись" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
@@ -151,7 +157,7 @@
           <p class="A_CraftsCardTitle">Ракульская роспись</p>
         </a>
 
-        <a class="M_CraftsCard" href="#">
+        <a class="M_CraftsCard" data-tags="Роспись" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
@@ -162,7 +168,7 @@
           <p class="A_CraftsCardTitle">Волховская роспись</p>
         </a>
 
-        <a class="M_CraftsCard" href="#">
+        <a class="M_CraftsCard" data-tags="Глина (керамика)" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
@@ -173,7 +179,7 @@
           <p class="A_CraftsCardTitle">Cкопинская керамика</p>
         </a>
 
-        <a class="M_CraftsCard" href="#">
+        <a class="M_CraftsCard" data-tags="Текстиль" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
@@ -195,7 +201,7 @@
           <p class="A_CraftsCardTitle">Филимоновская игрушка</p>
         </a>
 
-        <a class="M_CraftsCard" href="#">
+        <a class="M_CraftsCard" data-tags="Кость, Резьба" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
