первый вариант главной страницы

--- a/src/crafts.html
+++ b/src/crafts.html
@@ -113,7 +113,7 @@
           <p class="A_CraftsCardTitle">Мезенская роспись по&nbsp;дереву</p>
         </a>
 
-        <a class="M_CraftsCard" data-tags="Дерево, Роспись" href="#">
+        <a class="M_CraftsCard" data-tags="Глина (керамика)" href="#">
           <div class="A_CraftsCardPic">
             <img
               class="Q_CardImages"
