--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,8 @@
 
   <body>
     <div class="O_Header">
-      <div class="M_Header">
-        <a class="A_Logo" href="/">Ремёсла России</a>
+      <div class="M_Header -StartScreen">
+        <!-- <a class="A_Logo" href="/">Ремёсла России</a> -->
         <div class="C_HeaderNav">
           <a class="A_HeaderSections" href="./crafts.html">Библиотека</a>
           <a class="A_HeaderSections" href="./map.html">Карта</a>
@@ -55,8 +55,199 @@
       </div>
     </div>
 
-    здесь будет новая главная страница
-    <!-- test new computer -->
+    <div class="S_MainPage">
+      <section class="O_MainPageStart">
+        <div class="M_MainPageStartTexts">
+          <div class="A_MainPageLogo">
+            <h1 class="Q_MainPageLogoText">Ремёсла России</h1>
+          </div>
+          <p class="A_MainPageBodyText">
+            Проект создан для сохранения и&nbsp;популяризации народных ремёсел
+            и&nbsp;искусств. Мы&nbsp;собираем информацию о&nbsp;художественных
+            промыслах из&nbsp;разных регионов страны и&nbsp;рассказываем
+            о&nbsp;них&nbsp;&mdash; наглядно, доступно, интересно.
+          </p>
+        </div>
+
+        <div class="M_MainPageStartStickers">
+          <div class="A_StickerDoll"></div>
+          <div class="A_StickerHohloma2"></div>
+          <div class="A_StickerHohloma"></div>
+          <div class="A_StickerPrint"></div>
+          <div class="A_StickerGzhel"></div>
+          <div class="A_StickerMatreshka"></div>
+          <div class="A_StickerFlower"></div>
+          <div class="A_StickerPrint2"></div>
+          <div class="A_StickerHohloma3"></div>
+          <div class="A_StickerHead"></div>
+        </div>
+      </section>
+
+      <section class="O_MainPageCards">
+        <h2 class="A_MainPageSectionTitle">Популярные статьи</h2>
+
+        <div class="C_CraftsCards">
+          <a
+            class="M_CraftsCard"
+            data-tags="Кость, Резьба"
+            href="./crafts/uelen-bone-carving.html"
+          >
+            <div class="A_CraftsCardPic">
+              <img
+                class="Q_CardImages"
+                src="images/crafts/Uelen-bone-carving.png"
+                alt="Уэленская резьба по кости"
+              />
+            </div>
+            <p class="A_CraftsCardTitle">Уэленская резьба по&nbsp;кости</p>
+          </a>
+
+          <a class="M_CraftsCard" data-tags="Роспись" href="#">
+            <div class="A_CraftsCardPic">
+              <img
+                class="Q_CardImages"
+                src="images/crafts/Gorodets-painting.png"
+                alt="Городецкая роспись"
+              />
+            </div>
+            <p class="A_CraftsCardTitle">Городецкая роспись</p>
+          </a>
+
+          <a class="M_CraftsCard" data-tags="Роспись" href="#">
+            <div class="A_CraftsCardPic">
+              <img
+                class="Q_CardImages"
+                src="images/crafts/Mezen-painting.png"
+                alt="Мезенская роспись"
+              />
+            </div>
+            <p class="A_CraftsCardTitle">Мезенская роспись по&nbsp;дереву</p>
+          </a>
+
+          <a class="M_CraftsCard" data-tags="Глина (керамика)" href="#">
+            <div class="A_CraftsCardPic">
+              <img
+                class="Q_CardImages"
+                src="images/crafts/Petrovsky-toy.png"
+                alt="Петровская игрушка"
+              />
+            </div>
+            <p class="A_CraftsCardTitle">Петровская игрушка</p>
+          </a>
+        </div>
+      </section>
+
+      <section class="O_MainPageSearch">
+        <div class="M_MainPageSectionTexts">
+          <h2 class="A_MainPageSectionTitle">Найди ремесло по&nbsp;вкусу</h2>
+          <p class="A_MainPageDescription">
+            Воспользуйтесь нашим удобный поиском и&nbsp;найдите ремесло
+            по&nbsp;тегу, материалам и&nbsp;технике!
+          </p>
+        </div>
+
+        <div class="O_SearchInputField">
+          <div class="M_GetKnow">
+            <form class="FindArticle">
+              <input
+                type="text"
+                class="search"
+                placeholder="Введите запрос и воспользуйтесь фильтрами для поиска"
+              />
+            </form>
+            <!-- <div class="M_SearchButtonIcon">
+              <div class="A_Button"><h3>Найти</h3></div>
+            </div> -->
+          </div>
+        </div>
+      </section>
+
+      <section class="O_MainPageCards">
+        <h2 class="A_MainPageSectionTitle">Может быть инетересно</h2>
+
+        <div class="C_CraftsCards">
+          <a class="M_CraftsCard" data-tags="Текстиль" href="#">
+            <div class="A_CraftsCardPic">
+              <img
+                class="Q_CardImages"
+                src="images/crafts/Vologda-lace.png"
+                alt="Вологодское кружево"
+              />
+            </div>
+            <p class="A_CraftsCardTitle">Вологодское кружево</p>
+          </a>
+
+          <a class="M_CraftsCard" data-tags="Роспись" href="#">
+            <div class="A_CraftsCardPic">
+              <img
+                class="Q_CardImages"
+                src="images/crafts/Vologda-khokhloma.png"
+                alt="Вологодская хохлома"
+              />
+            </div>
+            <p class="A_CraftsCardTitle">Вологодская хохлома</p>
+          </a>
+
+          <a class="M_CraftsCard" data-tags="Роспись" href="#">
+            <div class="A_CraftsCardPic">
+              <img
+                class="Q_CardImages"
+                src="images/crafts/Rakul-painting.png"
+                alt="Ракульская роспись"
+              />
+            </div>
+            <p class="A_CraftsCardTitle">Ракульская роспись</p>
+          </a>
+
+          <a class="M_CraftsCard" data-tags="Роспись" href="#">
+            <div class="A_CraftsCardPic">
+              <img
+                class="Q_CardImages"
+                src="images/crafts/Volkhov-painting.png"
+                alt="Волховская роспись"
+              />
+            </div>
+            <p class="A_CraftsCardTitle">Волховская роспись</p>
+          </a>
+        </div>
+      </section>
+
+      <section class="W_MainPageTeaserName">
+        <h2 class="A_MainPageSectionTitle">Популярные статьи</h2>
+
+        <div class="O_MainPageTeaser">
+          <div class="M_MainPageTeaserTexts">
+            <div class="A_MainPageTeaserTitle">
+              <h3 class="Q_MainPageTeaserTitleText">Глина</h3>
+            </div>
+            <p class="A_MainPageBodyText">
+              Гончарное ремесло на&nbsp;Руси зародилось ещё
+              в&nbsp;доисторическую эпоху и&nbsp;при раскопках археологи
+              до&nbsp;сих пор находят различные горшки, кувшины, сковороды,
+              корчаги и&nbsp;другую утварь, слепленную вручную. Позже,
+              с&nbsp;появлением гончарного круга, ремесло превратилось
+              в&nbsp;промысел и&nbsp;глиняную посуду стали использовать
+              повсеместно.
+            </p>
+          </div>
+          <a class="A_MainPageTeaserButton" href="#">Читать</a>
+        </div>
+      </section>
+
+      <section class="O_MainPageSubscribe">
+        <div class="M_MainPageSectionTexts">
+          <h2 class="A_MainPageSectionTitle">Узнай больше о&nbsp;ремёслах</h2>
+          <p class="A_MainPageDescription">
+            Подпишись на&nbsp;нашу рассылку и&nbsp;не&nbsp;пропусти новый
+            уникальный контент!
+          </p>
+        </div>
+
+        <div class="O_PostInputField">
+          <div class="A_PostInputText"></div>
+        </div>
+      </section>
+    </div>
 
     <div class="O_Footer">
       <div class="M_Footer">
